--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -124,14 +124,18 @@
   </div>
 
   <!-- SECTION: Entwickler -->
-  <!-- <div class="bg-white rounded-2xl shadow-sm p-4 space-y-3">
+  <div class="bg-white rounded-2xl shadow-sm p-4 space-y-3">
     <div class="flex items-center gap-2">
       <span class="material-symbols-outlined text-blue-600">terminal</span>
       <h2 class="text-base font-semibold">Entwickler</h2>
     </div>
     <div class="flex justify-between items-center">
-      <span class="text-sm">Neue Startliste</span>
-      <app-toggle [(value)]="settings().useNewDepartureList" (change)="save()" />
+      <span class="text-sm">Flugpfad: Fehlsignale herausfiltern</span>
+      <app-toggle [(value)]="settings().flightPathExcludeFaultySignals" (change)="save()" />
     </div>
-  </div> -->
+    <div class="flex justify-between items-center">
+      <span class="text-sm">Datennutzung reduzieren</span>
+      <app-toggle [(value)]="settings().reduceDataUsage" (change)="save()" />
+    </div>
+  </div>
 </div>
